# openWin

./: .gitattributes  .gitignore  CMakeLists.txt
example/: LinearlySetOpacity.cpp
include/: Cur.h  ErrorStream.h  PathGenerator.h  Win.h  openWin  openWin.h  pg_Direct.h  pg_Linear.h
include/openWin/: Cur.h  ErrorStream.h  Geometry.h  Key.h  Painter.h  Tools.h  Win.h  Wins.h  openWin
include/openWin/ds/: ForwardList.h  LinkedList.h
include/openWin/pg/: BasicPathGenerator.h  Direct.h  Linear.h  PathGenerator.h
include/pg/: Direct.h  Linear.h  PathGenerator.h
src/: Cur.cpp  ErrorStream.cpp  Geometry.cpp  Key.cpp  Painter.cpp  PainterResources.cpp  PathGenerator.cpp  Win.cpp  Win_painter.cpp  Win_type.cpp
src/Built-in/: _MacrosForErrorHandling.h  _Windows.h
test/: CMakeLists.txt  LinkedList.cpp  Win-dpi.cpp  Win-moveTo-with-posflag.cpp  Win-moveTo-with-xy.cpp  keys-get_name.cpp  test_main.cpp  test_move.cpp
